Changed style of header, and making bio content

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   </head>
   <body>
     <div id="header">
-      <div>About Me</div>
-      <div>Projects</div>
-      <div>Contact Me!</div>
-      <a href="images/lucas_lugones_resume.pdf">Resume</a>
+      <a class="headeritem" href="#bio">About Me</a>
+      <a class="headeritem">Projects</a>
+      <a class="headeritem">Contact Me!</a>
+      <a href="images/lucas_lugones_resume.pdf" id="resume">
+        <div>Resume</div>
+      </a>
     </div>
-    <div>Content</div>
+    <div id="bio">
+      <div>stuff</div>
+      <div>stuff</div>
+    </div>
     <div>Footer</div>
   </body>
 </html>
