Finished bio section, and started on projects:

--- a/index.html
+++ b/index.html
@@ -10,15 +10,34 @@
     <div id="header">
       <a class="headeritem" href="#bio">About Me</a>
       <a class="headeritem">Projects</a>
+      <a class="headeritem">Experience</a>
       <a class="headeritem">Contact Me!</a>
       <a href="images/lucas_lugones_resume.pdf" id="resume">
         <div>Resume</div>
       </a>
     </div>
     <div id="bio">
-      <div>stuff</div>
-      <div>stuff</div>
+      <div class="imagebio">
+        <img src="images/bio_photo.jpg" alt="Picture of Lucas" id="biopic" />
+      </div>
+      <div id="biocontent">
+        <div class="biotitle">A little bit about me</div>
+        <div class="biodescription">
+          Hey! I'm Lucas, a Sophomore at Columbia University's Fu Foundation
+          School of Engineering and Applied Sciences studying Computer Science.
+          I am from La Paz Bolivia, and I currently live in New York City.
+          Outside of coding, I love to act, watch shows on netflix, read, and
+          play tennis!
+        </div>
+      </div>
     </div>
+    <div id="projects">
+      <div class="project">Calculator</div>
+      <div clalss="project">Etch-a-sketch</div>
+      <div class="project">Dijkstra's algorithm</div>
+      <div class="project">Video Poker</div>
+    </div>
+    <div id="experience"></div>
     <div>Footer</div>
   </body>
 </html>
