Continued with projects, and fixed style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="header">
       <a class="headeritem" href="#bio">About Me</a>
-      <a class="headeritem">Projects</a>
+      <a class="headeritem" href="#projects">Projects</a>
       <a class="headeritem">Experience</a>
       <a class="headeritem">Contact Me!</a>
       <a href="images/lucas_lugones_resume.pdf" id="resume">
@@ -32,7 +32,16 @@
       </div>
     </div>
     <div id="projects">
-      <div class="project">Calculator</div>
+      <div class="project">
+        <div>Calculator</div>
+        <img
+          src="images/calculator_image.png"
+          alt="calculator-image"
+          class="projectimage"
+        />
+        <div>languages used: HTML, CSS, JavaScript</div>
+        <a href="https://www.lucasnls.github.io/calculator">GitHub Link</a>
+      </div>
       <div clalss="project">Etch-a-sketch</div>
       <div class="project">Dijkstra's algorithm</div>
       <div class="project">Video Poker</div>
