Finished projects section

--- a/index.html
+++ b/index.html
@@ -21,32 +21,82 @@
         <img src="images/bio_photo.jpg" alt="Picture of Lucas" id="biopic" />
       </div>
       <div id="biocontent">
-        <div class="biotitle">A little bit about me</div>
+        <h2 class="biotitle">A little bit about me</h2>
         <div class="biodescription">
-          Hey! I'm Lucas, a Sophomore at Columbia University's Fu Foundation
+          Hey! I'm <span class ="highlighted">Lucas</span>, a Sophomore at Columbia University's Fu Foundation
           School of Engineering and Applied Sciences studying Computer Science.
-          I am from La Paz Bolivia, and I currently live in New York City.
+          I am from <span class ="highlighted">La Paz, Bolivia</span>, and I currently live in New York City.
           Outside of coding, I love to act, watch shows on netflix, read, and
-          play tennis!
+          play tennis. Thank you for coming to my website!
         </div>
       </div>
     </div>
     <div id="projects">
       <div class="project">
         <div>Calculator</div>
-        <img
-          src="images/calculator_image.png"
-          alt="calculator-image"
-          class="projectimage"
-        />
-        <div>languages used: HTML, CSS, JavaScript</div>
+        <div class="project-image-contain">
+          <img
+            src="images/calculator_image.png"
+            alt="calculator-image"
+            class="projectimage"
+          />
+        </div>
+        <div class="mascara">
+          <div>languages used: HTML, CSS, JavaScript</div>
+        </div>
         <a href="https://www.lucasnls.github.io/calculator">GitHub Link</a>
       </div>
-      <div clalss="project">Etch-a-sketch</div>
-      <div class="project">Dijkstra's algorithm</div>
-      <div class="project">Video Poker</div>
+      <div class="project">
+        <div>Dijkstra's Algorithm</div>
+        <div class="project-image-contain">
+          <img
+            src="images/dijkstra_project.png"
+            alt="dijkstra's image"
+            class="projectimage"
+          />
+        </div>
+          <div>languages used: Java</div>
+        <a href="https://github.com/LucasNLS/dijkstra-project">Github Link</a>
+      </div>
+      <div class="project">
+        <div>Etch-A-Sketch</div>
+        <div class="project-image-contain">
+          <img src = images/etch-a-sketch.png alt="etch-a-sketch image" class =
+          "projectimage">
+          </div>
+          <div>languages used: HTML, CSS, JavaScript</div>
+          <a href="https://lucasnls.github.io/etch-a-sketch">Github Link</a>
+
+          </div>
+          <div class = "extra-project">
+            <div id="otherproject-title">Other Projects</div>
+            <div>
+                <div class = "other-titles">Dynamic Web Server</div>
+                <div>Languages used: C</div>
+                <a>Github Link</a>
+            </div>
+            <div>
+                <div class = "other-titles">Video Poker</div>
+                <div>Languages used: Java</div>
+                <a>Github Link</a>
+            </div>
+            <div>
+                <div class = "other-titles">BST</div>
+                <div>Languages used: scala</div>
+                <div>Github Link</div>
+            </div>
+            <div>
+                <div class = "other-titles">21 Blackjack</div>
+                <div>Languages used: Python</div>
+                <div>Github <Link:mf></Link:mf></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="experience"></div>
+    <div id="experience">
+        hi
+    </div>
     <div>Footer</div>
   </body>
 </html>
