--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <a class="headeritem" href="#bio">About Me</a>
       <a class="headeritem" href="#projects">Projects</a>
       <a class="headeritem">Experience</a>
-      <a class="headeritem">Contact Me!</a>
+      <a class="headeritem" href="#footer">Contact Me!</a>
       <a href="images/lucas_lugones_resume.pdf" id="resume">
         <div>Resume</div>
       </a>
     </div>
     <div id="bio">
       <div class="imagebio">
-        <img src="images/bio_photo.jpg" alt="Picture of Lucas" id="biopic" />
+        <img src="images/bio_photo2.jpg" alt="Picture of Lucas" id="biopic" />
       </div>
       <div id="biocontent">
         <h2 class="biotitle">A little bit about me</h2>
@@ -26,14 +26,14 @@
           Hey! I'm <span class ="highlighted">Lucas</span>, a Sophomore at Columbia University's Fu Foundation
           School of Engineering and Applied Sciences studying Computer Science.
           I am from <span class ="highlighted">La Paz, Bolivia</span>, and I currently live in New York City.
-          Outside of coding, I love to act, watch shows on netflix, read, and
-          play tennis. Thank you for coming to my website!
+          Outside of coding, I love acting, watching shows on netflix, reading, and
+          playing tennis. Thank you for coming to my website!
         </div>
       </div>
     </div>
     <div id="projects">
       <div class="project">
-        <div>Calculator</div>
+        <div class = "other-titles" >Calculator</div>
         <div class="project-image-contain">
           <img
             src="images/calculator_image.png"
@@ -47,7 +47,7 @@
         <a href="https://www.lucasnls.github.io/calculator">GitHub Link</a>
       </div>
       <div class="project">
-        <div>Dijkstra's Algorithm</div>
+        <div class = "other-titles">Dijkstra's Algorithm</div>
         <div class="project-image-contain">
           <img
             src="images/dijkstra_project.png"
@@ -59,7 +59,7 @@
         <a href="https://github.com/LucasNLS/dijkstra-project">Github Link</a>
       </div>
       <div class="project">
-        <div>Etch-A-Sketch</div>
+        <div class = "other-titles">Etch-A-Sketch</div>
         <div class="project-image-contain">
           <img src = images/etch-a-sketch.png alt="etch-a-sketch image" class =
           "projectimage">
@@ -95,8 +95,18 @@
       </div>
     </div>
     <div id="experience">
-        hi
+        <div class="experience-container">EZ Claims</div>
+        <div class="experience-container">EZ Claims</div>
+        <div class="experience-container">EZ Claims</div>
+        <div class="experience-container">EZ Claims</div>
     </div>
-    <div>Footer</div>
+    <div id = "footer">
+        <div>Made by Lucas Lugones ©</div>
+        <ul class = "links">
+            <li><a href = "mailto:lucasn.lugones@gmail.com">E-mail</a></li>
+            <li><a href = "https://github.com/LucasNLS">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/lucas-lugones/"">LinkedIn</a></li>
+        </ul>
+    </div>
   </body>
 </html>
