Added new experience, and updated resume

--- a/index.html
+++ b/index.html
@@ -86,15 +86,28 @@
                 <div>Github Link</div>
             </div>
             <div>
-                <div class = "other-titles">21 Blackjack</div>
+                <div class = "other-titles">21 BlackJack</div>
                 <div>Languages used: Python</div>
-                <div>Github <Link:mf></Link:mf></div>
+                <div>Github Link<Link:mf></Link:mf></div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div id="experience">
+      <div class="experience-container">
+        <div class = "logo-title">
+            <img src = "images/ibm_logo.png" alt = "IBM logo" class="explogo"/>
+            <h2>IBM Accelerate</h2>
+            <h3>June 2023 - August 2023</h3>
+            </div>
+            <div>
+                <ul>
+                    <li>Learning skills from software developers at IBM by reinforcing skills such as JavaScript, HTML, CSS, React, and Node.js.</li>
+                    <li>Practice networking, leadership, and effective collaboration.</li>
+                        
+            </div>
+        </div>
         <div class="experience-container">
             <div class = "logo-title">
             <img src = "images/mltlogo.png" alt="MLT Logo" class="explogo"/>
