Changed profile picture

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </div>
     <div id="bio">
       <div class="imagebio">
-        <img src="images/bio_photo2.jpg" alt="Picture of Lucas" id="biopic" />
+        <img src="images/bio_photo3.png" alt="Picture of Lucas" id="biopic" />
       </div>
       <div id="biocontent">
         <h2 class="biotitle">A little bit about me</h2>
         <div class="biodescription">
-          Hey! I'm <span class ="highlighted">Lucas</span>, a Sophomore at Columbia University's Fu Foundation
+          Hello! I'm <span class ="highlighted">Lucas</span>, a Sophomore at Columbia University's Fu Foundation
           School of Engineering and Applied Sciences studying Computer Science.
           I am from <span class ="highlighted">La Paz, Bolivia</span>, and I currently live in New York City.
           Outside of coding, I love acting, watching shows on netflix, reading, and
