Edited website to add experience and new resume

--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
     </div>
     <div id="bio">
       <div class="imagebio">
-        <img src="images/bio_photo3.png" alt="Picture of Lucas" id="biopic" />
+        <img src="images/second_bio.JPG" alt="Picture of Lucas" id="biopic" />
       </div>
       <div id="biocontent">
         <h2 class="biotitle">A little bit about me</h2>
         <div class="biodescription">
-          Hello! I'm <span class ="highlighted">Lucas</span>, a Sophomore at Columbia University's Fu Foundation
+          Hello! I'm <span class ="highlighted">Lucas</span>, a Senior at Columbia University's Fu Foundation
           School of Engineering and Applied Sciences studying Computer Science.
           I am from <span class ="highlighted">La Paz, Bolivia</span>, and I currently live in New York City.
-          Outside of coding, I love acting, watching shows on netflix, reading, and
-          playing tennis. Thank you for coming to my website!
+          Outside of coding, I love acting, singing, crocheting, playing guitar, and binge-watching shows.
         </div>
       </div>
     </div>
@@ -95,6 +94,19 @@
       </div>
     </div>
     <div id="experience">
+      <div class = "experience-container">
+        <div class = "logo-title">
+          <img src = "images/linkedin_logo.png" alt = "Linkedin logo" class = "explogo"/>
+          <h2>LinkedIn</h2>
+          <h3>May 2024 - August 2024</h3>
+        </div>
+        <div>
+          <ul>
+            <li>Software Engineering Intern</li>
+            <li>Developed a Push Notification for Abandoned Jobs (Jobs that were created, but never finished)</li>
+          </ul>
+        </div>
+      </div>
       <div class="experience-container">
         <div class = "logo-title">
             <img src = "images/ibm_logo.png" alt = "IBM logo" class="explogo"/>
