--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
     <title>Lucas' Webpage</title>
     <link rel="stylesheet" href="style.css" />
     <script src="program.js" defer></script>
+       <!--Href for bootstrap-->
+       <link
+       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+       rel="stylesheet"
+       crossorigin="anonymous"
+     />
+     <!--Href for jquery-->
+     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+     <link
+       rel="stylesheet"
+       href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+     />
+     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}" />
   </head>
   <body>
     <div id="header">
-      <a class="headeritem" href="#bio">About Me</a>
       <a class="headeritem" href="#projects">Projects</a>
       <a class="headeritem" href="#experience">Experience</a>
       <a class="headeritem" href="#footer">Contact Me!</a>
       <a href="images/lucas_lugones_resume.pdf" id="resume">
-        <div>Resume</div>
+        <div class="resume-text">Resume</div>
       </a>
     </div>
-    <div id="bio">
-      <div class="imagebio">
+    <div id="bio" class ="row align-items-center">
+      <div class="imagebio col-sm-12 col-md-12 col-lg-6 align-items-center">
         <img src="images/second_bio.JPG" alt="Picture of Lucas" id="biopic" />
       </div>
-      <div id="biocontent">
+      <div id="biocontent" class="col-sm-12 col-md-12 col-lg-6 align-items-center">
         <h2 class="biotitle">Welcome to my website :)</h2>
         <div class="biodescription">
           Hello! I'm <span class ="highlighted">Lucas</span>, a recent graduate of Columbia University  with a degree in Computer Science.
@@ -34,69 +47,6 @@
         </div>
         <div class="biodescription">
           Outside of coding, I love acting, singing, crocheting, playing the piano, and binge-watching shows. 
-        </div>
-      </div>
-    </div>
-    <div id="projects" class="scroll-animate">
-      <div class="project">
-        <div class = "other-titles" >Calculator</div>
-        <div class="project-image-contain">
-          <img
-            src="images/calculator_image.png"
-            alt="calculator-image"
-            class="projectimage"
-          />
-        </div>
-        <div class="mascara">
-          <div>languages used: HTML, CSS, JavaScript</div>
-        </div>
-        <a href="https://lucasnls.github.io/calculator/">GitHub Link</a>
-      </div>
-      <div class="project">
-        <div class = "other-titles">Dijkstra's Algorithm</div>
-        <div class="project-image-contain">
-          <img
-            src="images/dijkstra_project.png"
-            alt="dijkstra's image"
-            class="projectimage"
-          />
-        </div>
-          <div>languages used: Java</div>
-        <a href="https://github.com/LucasNLS/dijkstra-project">Github Link</a>
-      </div>
-      <div class="project">
-        <div class = "other-titles">Etch-A-Sketch</div>
-        <div class="project-image-contain">
-          <img src = images/etch-a-sketch.png alt="etch-a-sketch image" class =
-          "projectimage">
-          </div>
-          <div>languages used: HTML, CSS, JavaScript</div>
-          <a href="https://lucasnls.github.io/etch-a-sketch">Github Link</a>
-
-          </div>
-          <div class = "extra-project">
-            <div id="otherproject-title other-titles">Other Projects</div>
-            <div>
-                <div class = "other-titles">Dynamic Web Server</div>
-                <div>Languages used: C</div>
-                <a>Github Link</a>
-            </div>
-            <div>
-                <div class = "other-titles">Video Poker</div>
-                <div>Languages used: Java</div>
-                <a>Github Link</a>
-            </div>
-            <div>
-                <div class = "other-titles">BST</div>
-                <div>Languages used: scala</div>
-                <div>Github Link</div>
-            </div>
-            <div>
-                <div class = "other-titles">21 BlackJack</div>
-                <div>Languages used: Python</div>
-                <div>Github Link<Link:mf></Link:mf></div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -178,6 +128,69 @@
                             
                 </div>
         </div>
+    </div>
+    <div id="experiences" class="scroll-animate">
+      <div class="project">
+        <div class = "other-titles" >Calculator</div>
+        <div class="project-image-contain">
+          <img
+            src="images/calculator_image.png"
+            alt="calculator-image"
+            class="projectimage"
+          />
+        </div>
+        <div class="mascara">
+          <div>languages used: HTML, CSS, JavaScript</div>
+        </div>
+        <a href="https://lucasnls.github.io/calculator/">GitHub Link</a>
+      </div>
+      <div class="project">
+        <div class = "other-titles">Dijkstra's Algorithm</div>
+        <div class="project-image-contain">
+          <img
+            src="images/dijkstra_project.png"
+            alt="dijkstra's image"
+            class="projectimage"
+          />
+        </div>
+          <div>languages used: Java</div>
+        <a href="https://github.com/LucasNLS/dijkstra-project">Github Link</a>
+      </div>
+      <div class="project">
+        <div class = "other-titles">Etch-A-Sketch</div>
+        <div class="project-image-contain">
+          <img src = images/etch-a-sketch.png alt="etch-a-sketch image" class =
+          "projectimage">
+          </div>
+          <div>languages used: HTML, CSS, JavaScript</div>
+          <a href="https://lucasnls.github.io/etch-a-sketch">Github Link</a>
+
+          </div>
+          <div class = "extra-project">
+            <div id="otherproject-title other-titles">Other Projects</div>
+            <div>
+                <div class = "other-titles">Dynamic Web Server</div>
+                <div>Languages used: C</div>
+                <a>Github Link</a>
+            </div>
+            <div>
+                <div class = "other-titles">Video Poker</div>
+                <div>Languages used: Java</div>
+                <a>Github Link</a>
+            </div>
+            <div>
+                <div class = "other-titles">BST</div>
+                <div>Languages used: scala</div>
+                <div>Github Link</div>
+            </div>
+            <div>
+                <div class = "other-titles">21 BlackJack</div>
+                <div>Languages used: Python</div>
+                <div>Github Link<Link:mf></Link:mf></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     </div>
     <div id = "footer" class="scroll-animate">
