--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lucas' Webpage</title>
     <link rel="stylesheet" href="style.css" />
     <script src="program.js" defer></script>
@@ -31,10 +32,10 @@
       </a>
     </div>
     <div id="bio" class ="row align-items-center">
-      <div class="imagebio col-sm-12 col-md-12 col-lg-6 align-items-center">
+      <div class="imagebio col-sm-12 col-md-12 col-lg-6">
         <img src="images/second_bio.JPG" alt="Picture of Lucas" id="biopic" />
       </div>
-      <div id="biocontent" class="col-sm-12 col-md-12 col-lg-6 align-items-center">
+      <div id="biocontent" class="col-sm-12 col-md-12 col-lg-6 ">
         <h2 class="biotitle">Welcome to my website :)</h2>
         <div class="biodescription">
           Hello! I'm <span class ="highlighted">Lucas</span>, a recent graduate of Columbia University  with a degree in Computer Science.
